--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="Luna's personal site">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <link rel="author" href="http://loona.me">
+    <link rel="author" href="https://loona.me">
     <link rel="manifest" href="/manifest.json">
 
     <!-- Favicon -->
@@ -40,14 +40,14 @@
     <meta property="og:description" content="Luna's personal website">
     <meta property="og:title" content="Luna">
     <meta property="og:site_name" content="Luna's Personal website">
-    <meta property="og:url" content="http://loona.me">
+    <meta property="og:url" content="https://loona.me">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="Luna's Personal website">
     <meta name="twitter:title" content="Luna">
     <meta name="twitter:description" content="Luna's personal website">
     <meta name="twitter:image" content="/static/img/apple-icon-180x180.png">
-    <meta name="twitter:url" content="http://loona.me/">
+    <meta name="twitter:url" content="https://loona.me/">
 
     <!-- Google+ -->
     <meta itemprop="name" content="Luna">
